--- a/glue/apache-iceberg.ipynb
+++ b/glue/apache-iceberg.ipynb
@@ -44,8 +44,10 @@
    "metadata": {},
    "source": [
     "https://docs.aws.amazon.com/ko_kr/glue/latest/dg/aws-glue-programming-etl-format-iceberg.html <br>\n",
-    "IceBerg 테이블을 생성하기 위해서는 GLUE JOB 실행 파라미터로 --datalake-formats = iceberg 값을 줘야한다.\n",
-    "이값을 설정하지 않으면 glue_catalog 플러그인을 찾을 수 없다는 오류가 발생한다."
+    "IceBerg 테이블을 생성하기 위해서는 GLUE JOB 실행 파라미터로 --datalake-formats = iceberg 값을 줘야한다. \n",
+    "GLUE 콘솔에서 JOB을 등록할때 실행 파라미터 값을 설정하거나, CLI 커맨드를 이용하여 JOB 을 등록할 떄 값을 설정해야 한다.\n",
+    "이값을 설정하지 않으면 코드 실행시 glue_catalog 플러그인을 찾을 수 없다는 오류가 발생한다. \n",
+    "이에 반해, 이 노트북에서 처럼 glue interactive 모드를 사용하는 경우는 아래와 같이 %%configure 매직을 활용하여 datalake format 이 iceberg 로 설정한다."
    ]
   },
   {
@@ -112,7 +114,9 @@
    "id": "90f21c84",
    "metadata": {},
    "source": [
-    "https://spark.apache.org/docs/3.1.1/api/python/reference/api/pyspark.sql.SparkSession.html"
+    "https://spark.apache.org/docs/3.1.1/api/python/reference/api/pyspark.sql.SparkSession.html\n",
+    "glue spark 에서 iceberg 테이블을 사용하기 위해서는 아래와 같이 config 를 설정해야 한다. 코드상에 spark 세션의 .config 함수를 활용할 수도 있고,\n",
+    "glue job 의 파리미터로 설정할 수도 있다. 지금처럼 인터랙티브 모드로 개발하는 경우에는 spark session 에 설정한다."
    ]
   },
   {
