--- a/glue/apache-iceberg.ipynb
+++ b/glue/apache-iceberg.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4b125439",
+   "metadata": {},
+   "source": [
+    "AWSGlueServiceRoleJupyter 생성시 아래의 정책을 연결한다.. \n",
+    "\n",
+    "1.AmazonS3FullAccess <br>\n",
+    "2.AWSGlueServiceRole <br>\n",
+    "3.AWSGlueServiceRoleJupyter-Dynamo (Inline) <br>\n",
+    "  {\n",
+    "    \"Version\": \"2012-10-17\",\n",
+    "    \"Statement\": [\n",
+    "        {\n",
+    "            \"Sid\": \"AllAPIActionsOnBooks\",\n",
+    "            \"Effect\": \"Allow\",\n",
+    "            \"Action\": \"dynamodb:*\",\n",
+    "            \"Resource\": \"arn:aws:dynamodb:ap-northeast-2:499514681453:table/iceberg-lock\"\n",
+    "        }\n",
+    "    ]\n",
+    "}  \n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "1fb57ef1",
@@ -84,17 +108,18 @@
       "Trying to create a Glue session for the kernel.\n",
       "Worker Type: G.2X\n",
       "Number of Workers: 2\n",
-      "Session ID: 90091c52-8d34-4f92-8fae-81eaf1aadfd0\n",
+      "Session ID: 16c5c365-b73e-45ee-8ba7-d4d283c7e6bf\n",
       "Job Type: glueetl\n",
       "Applying the following default arguments:\n",
       "--glue_kernel_version 0.37.2\n",
       "--enable-glue-datacatalog true\n",
       "--datalake-formats iceberg\n",
-      "Waiting for session 90091c52-8d34-4f92-8fae-81eaf1aadfd0 to get into ready status...\n",
-      "Session 90091c52-8d34-4f92-8fae-81eaf1aadfd0 has been created.\n",
+      "Waiting for session 16c5c365-b73e-45ee-8ba7-d4d283c7e6bf to get into ready status...\n",
+      "Session 16c5c365-b73e-45ee-8ba7-d4d283c7e6bf has been created.\n",
       "+--------+--------------------+-----------+\n",
       "|database|           tableName|isTemporary|\n",
       "+--------+--------------------+-----------+\n",
+      "|  sample|             iceberg|      false|\n",
       "|  sample|             tbl-csv|      false|\n",
       "|  sample|       tbl-flight-p5|      false|\n",
       "|  sample|     tbl-flight-part|      false|\n",
@@ -151,11 +176,14 @@
     "# Iceberg configuration\n",
     "warehouse_path = 's3://glue-seoul-20230405/iceberg'\n",
     "spark = SparkSession.builder \\\n",
+    "    .appName(\"iceberg DDL/DML\") \\\n",
     "    .config('spark.sql.extensions', 'org.apache.iceberg.spark.extensions.IcebergSparkSessionExtensions') \\\n",
     "    .config('spark.sql.catalog.glue_catalog', 'org.apache.iceberg.spark.SparkCatalog') \\\n",
     "    .config('spark.sql.catalog.glue_catalog.warehouse', warehouse_path) \\\n",
     "    .config('spark.sql.catalog.glue_catalog.catalog-impl', 'org.apache.iceberg.aws.glue.GlueCatalog') \\\n",
     "    .config('spark.sql.catalog.glue_catalog.io-impl', 'org.apache.iceberg.aws.s3.S3FileIO') \\\n",
+    "    .config('spark.sql.catalog.glue_catalog.lock-impl', 'org.apache.iceberg.aws.glue.DynamoLockManager') \\\n",
+    "    .config('spark.sql.catalog.glue_catalog.lock.table', 'iceberg-lock') \\\n",
     "    .getOrCreate()\n",
     "\n",
     "sc = spark.sparkContext\n",
@@ -166,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "67437939",
    "metadata": {},
    "outputs": [
@@ -191,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e6bb0bc7",
    "metadata": {},
    "outputs": [
@@ -199,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataFrame[]\n"
+      "AnalysisException: Table sample.iceberg already exists\n"
      ]
     }
    ],
@@ -214,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "4a5894eb",
    "metadata": {},
    "outputs": [
@@ -296,7 +324,175 @@
       "+--------+\n",
       "|count(1)|\n",
       "+--------+\n",
-      "| 5248439|\n",
+      "| 6288052|\n",
+      "+--------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select count(1) from `glue_catalog`.sample.`iceberg`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "60a87a9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+------+\n",
+      "|month|   cnt|\n",
+      "+-----+------+\n",
+      "|   12|460949|\n",
+      "|    2|423889|\n",
+      "|    9|454878|\n",
+      "|   11|970536|\n",
+      "|    7|502457|\n",
+      "|    3|479122|\n",
+      "|    8|498347|\n",
+      "|    5|479358|\n",
+      "|    4|461630|\n",
+      "|   10|623422|\n",
+      "|    1|445827|\n",
+      "|    6|487637|\n",
+      "+-----+------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select month, count(1) as cnt from `glue_catalog`.sample.`iceberg` group by month;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "996a6333",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "++\n",
+      "||\n",
+      "++\n",
+      "++\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "insert into `glue_catalog`.sample.`iceberg` select * from `glue_catalog`.sample.`iceberg` where month = 11;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "90664b6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+\n",
+      "|count(1)|\n",
+      "+--------+\n",
+      "| 6288052|\n",
+      "+--------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "countDf = spark.sql(\"select count(1) from `glue_catalog`.sample.`iceberg`\")\n",
+    "countDf.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "cd3c4dce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------+\n",
+      "|airline_id|    cnt|\n",
+      "+----------+-------+\n",
+      "|     19393|1302080|\n",
+      "|     19790|1176192|\n",
+      "|     20304| 796656|\n",
+      "|     19805| 769669|\n",
+      "|     19977| 708422|\n",
+      "|     20366| 640132|\n",
+      "|     20409| 247554|\n",
+      "|     20416| 184523|\n",
+      "|     19930| 156300|\n",
+      "|     20436| 126935|\n",
+      "|     19690| 101243|\n",
+      "|     21171|  78346|\n",
+      "+----------+-------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select airline_id, count(1) as cnt from `glue_catalog`.sample.`iceberg` \n",
+    "group by airline_id\n",
+    "order by cnt desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "dd80cd2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "++\n",
+      "||\n",
+      "++\n",
+      "++\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql \n",
+    "delete from `glue_catalog`.sample.`iceberg`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28afc007",
+   "metadata": {},
+   "source": [
+    "https://iceberg.apache.org/docs/latest/spark-writes/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f14523fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+\n",
+      "|count(1)|\n",
+      "+--------+\n",
+      "|       0|\n",
       "+--------+\n"
      ]
     }
