--- a/glue/apache-iceberg.ipynb
+++ b/glue/apache-iceberg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4b125439",
+   "id": "35e1c65d",
    "metadata": {},
    "source": [
     "AWSGlueServiceRoleJupyter 생성시 아래의 정책을 연결한다.. \n",
@@ -185,6 +185,7 @@
     "    .config('spark.sql.catalog.glue_catalog.lock-impl', 'org.apache.iceberg.aws.glue.DynamoLockManager') \\\n",
     "    .config('spark.sql.catalog.glue_catalog.lock.table', 'iceberg-lock') \\\n",
     "    .getOrCreate()\n",
+    "\n",
     "\n",
     "sc = spark.sparkContext\n",
     "glueContext = GlueContext(sc)\n",
@@ -452,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dd80cd2e",
+   "id": "fb44ef01",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28afc007",
+   "id": "9ee51fff",
    "metadata": {},
    "source": [
     "https://iceberg.apache.org/docs/latest/spark-writes/"
@@ -482,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f14523fe",
+   "id": "139d242d",
    "metadata": {},
    "outputs": [
     {
@@ -500,6 +501,164 @@
    "source": [
     "%%sql\n",
     "select count(1) from `glue_catalog`.sample.`iceberg`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7d04ca67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "++\n",
+      "||\n",
+      "++\n",
+      "++\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "insert into `glue_catalog`.sample.`iceberg`\n",
+    "select * from sample.`tbl-flight4`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0d4a2ae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+\n",
+      "|count(1)|\n",
+      "+--------+\n",
+      "| 5248439|\n",
+      "+--------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql \n",
+    "select count(1) from `glue_catalog`.sample.`iceberg`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f121dc6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Py4JJavaError: An error occurred while calling o69.sql.\n",
+      ": java.lang.UnsupportedOperationException: UPDATE TABLE is not supported temporarily.\n",
+      "\tat org.apache.spark.sql.execution.SparkStrategies$BasicOperators$.apply(SparkStrategies.scala:716)\n",
+      "\tat org.apache.spark.sql.catalyst.planning.QueryPlanner.$anonfun$plan$1(QueryPlanner.scala:63)\n",
+      "\tat scala.collection.Iterator$$anon$11.nextCur(Iterator.scala:480)\n",
+      "\tat scala.collection.Iterator$$anon$11.hasNext(Iterator.scala:486)\n",
+      "\tat scala.collection.Iterator$$anon$11.hasNext(Iterator.scala:485)\n",
+      "\tat org.apache.spark.sql.catalyst.planning.QueryPlanner.plan(QueryPlanner.scala:93)\n",
+      "\tat org.apache.spark.sql.execution.SparkStrategies.plan(SparkStrategies.scala:67)\n",
+      "\tat org.apache.spark.sql.catalyst.planning.QueryPlanner.$anonfun$plan$3(QueryPlanner.scala:78)\n",
+      "\tat scala.collection.TraversableOnce.$anonfun$foldLeft$1(TraversableOnce.scala:156)\n",
+      "\tat scala.collection.TraversableOnce.$anonfun$foldLeft$1$adapted(TraversableOnce.scala:156)\n",
+      "\tat scala.collection.Iterator.foreach(Iterator.scala:937)\n",
+      "\tat scala.collection.Iterator.foreach$(Iterator.scala:937)\n",
+      "\tat scala.collection.AbstractIterator.foreach(Iterator.scala:1425)\n",
+      "\tat scala.collection.TraversableOnce.foldLeft(TraversableOnce.scala:156)\n",
+      "\tat scala.collection.TraversableOnce.foldLeft$(TraversableOnce.scala:154)\n",
+      "\tat scala.collection.AbstractIterator.foldLeft(Iterator.scala:1425)\n",
+      "\tat org.apache.spark.sql.catalyst.planning.QueryPlanner.$anonfun$plan$2(QueryPlanner.scala:75)\n",
+      "\tat scala.collection.Iterator$$anon$11.nextCur(Iterator.scala:480)\n",
+      "\tat scala.collection.Iterator$$anon$11.hasNext(Iterator.scala:486)\n",
+      "\tat org.apache.spark.sql.catalyst.planning.QueryPlanner.plan(QueryPlanner.scala:93)\n",
+      "\tat org.apache.spark.sql.execution.SparkStrategies.plan(SparkStrategies.scala:67)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution$.createSparkPlan(QueryExecution.scala:426)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.$anonfun$sparkPlan$1(QueryExecution.scala:104)\n",
+      "\tat org.apache.spark.sql.catalyst.QueryPlanningTracker.measurePhase(QueryPlanningTracker.scala:192)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.$anonfun$executePhase$1(QueryExecution.scala:163)\n",
+      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:772)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.executePhase(QueryExecution.scala:163)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.sparkPlan$lzycompute(QueryExecution.scala:104)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.sparkPlan(QueryExecution.scala:97)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.$anonfun$executedPlan$1(QueryExecution.scala:117)\n",
+      "\tat org.apache.spark.sql.catalyst.QueryPlanningTracker.measurePhase(QueryPlanningTracker.scala:192)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.$anonfun$executePhase$1(QueryExecution.scala:163)\n",
+      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:772)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.executePhase(QueryExecution.scala:163)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.executedPlan$lzycompute(QueryExecution.scala:114)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.executedPlan(QueryExecution.scala:110)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.$anonfun$writePlans$5(QueryExecution.scala:245)\n",
+      "\tat org.apache.spark.sql.catalyst.plans.QueryPlan$.append(QueryPlan.scala:487)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.writePlans(QueryExecution.scala:245)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.toString(QueryExecution.scala:260)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.org$apache$spark$sql$execution$QueryExecution$$explainString(QueryExecution.scala:216)\n",
+      "\tat org.apache.spark.sql.execution.QueryExecution.explainString(QueryExecution.scala:195)\n",
+      "\tat org.apache.spark.sql.execution.SQLExecution$.executeQuery$1(SQLExecution.scala:102)\n",
+      "\tat org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$6(SQLExecution.scala:135)\n",
+      "\tat org.apache.spark.sql.catalyst.QueryPlanningTracker$.withTracker(QueryPlanningTracker.scala:107)\n",
+      "\tat org.apache.spark.sql.execution.SQLExecution$.withTracker(SQLExecution.scala:232)\n",
+      "\tat org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$5(SQLExecution.scala:135)\n",
+      "\tat org.apache.spark.sql.execution.SQLExecution$.withSQLConfPropagated(SQLExecution.scala:253)\n",
+      "\tat org.apache.spark.sql.execution.SQLExecution$.$anonfun$withNewExecutionId$1(SQLExecution.scala:134)\n",
+      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:772)\n",
+      "\tat org.apache.spark.sql.execution.SQLExecution$.withNewExecutionId(SQLExecution.scala:68)\n",
+      "\tat org.apache.spark.sql.Dataset.withAction(Dataset.scala:3722)\n",
+      "\tat org.apache.spark.sql.Dataset.<init>(Dataset.scala:229)\n",
+      "\tat org.apache.spark.sql.Dataset$.$anonfun$ofRows$2(Dataset.scala:100)\n",
+      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:772)\n",
+      "\tat org.apache.spark.sql.Dataset$.ofRows(Dataset.scala:97)\n",
+      "\tat org.apache.spark.sql.SparkSession.$anonfun$sql$1(SparkSession.scala:615)\n",
+      "\tat org.apache.spark.sql.SparkSession.withActive(SparkSession.scala:772)\n",
+      "\tat org.apache.spark.sql.SparkSession.sql(SparkSession.scala:610)\n",
+      "\tat sun.reflect.GeneratedMethodAccessor104.invoke(Unknown Source)\n",
+      "\tat sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
+      "\tat java.lang.reflect.Method.invoke(Method.java:498)\n",
+      "\tat py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
+      "\tat py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\n",
+      "\tat py4j.Gateway.invoke(Gateway.java:282)\n",
+      "\tat py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
+      "\tat py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
+      "\tat py4j.GatewayConnection.run(GatewayConnection.java:238)\n",
+      "\tat java.lang.Thread.run(Thread.java:750)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "update `glue_catalog`.sample.`iceberg`\n",
+    "set\n",
+    "  taxi_out = 0\n",
+    "where month = 12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ae05f0d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AnalysisException: Cannot delete from table glue_catalog.sample.iceberg where [EqualTo(month,12)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "delete from `glue_catalog`.sample.`iceberg` where month = 12"
    ]
   }
  ],
