--- a/glue/apache-iceberg.ipynb
+++ b/glue/apache-iceberg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "35e1c65d",
+   "id": "c676441e",
    "metadata": {},
    "source": [
     "AWSGlueServiceRoleJupyter 생성시 아래의 정책을 연결한다.. \n",
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fb44ef01",
+   "id": "4697716b",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ee51fff",
+   "id": "f90bd4f6",
    "metadata": {},
    "source": [
     "https://iceberg.apache.org/docs/latest/spark-writes/"
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "139d242d",
+   "id": "a8b82a39",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7d04ca67",
+   "id": "bf8aaead",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0d4a2ae0",
+   "id": "71bcbeca",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f121dc6b",
+   "id": "329ce733",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ae05f0d7",
+   "id": "fccbe4ca",
    "metadata": {},
    "outputs": [
     {
@@ -660,6 +660,43 @@
     "%%sql\n",
     "delete from `glue_catalog`.sample.`iceberg` where month = 12"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c16965d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'3.1.1-amzn-0'\n"
+     ]
+    }
+   ],
+   "source": [
+    "sc.version\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b1e9fb8",
+   "metadata": {},
+   "source": [
+    "https://docs.aws.amazon.com/glue/latest/dg/release-notes.html  <br>\n",
+    "glue 3.0 의 경우 iceberg 버전 0.13.1 을 지원함\n",
+    "glue 4.0 의 경우 iceberg 버전 1.0.0 을 지원함.\n",
+    "인터랙티브 노트북은 glue 3.0 까지는 지원하는 관계로, 이 노트북에서 사용하는 버전이 iceberg 0.13.1 인 관계로 DML이 제대로 지원되지 않은듯 .. ??!!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3de004e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
