--- a/glue/apache-iceberg.ipynb
+++ b/glue/apache-iceberg.ipynb
@@ -26,29 +26,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "1fb57ef1",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are already connected to a glueetl session 16c5c365-b73e-45ee-8ba7-d4d283c7e6bf.\n",
+      "\n",
+      "No change will be made to the current session that is set as glueetl. The session configuration change will apply to newly created sessions.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to the Glue Interactive Sessions Kernel\n",
-      "For more information on available magic commands, please type %help in any new cell.\n",
+      "Setting Glue version to: 3.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are already connected to a glueetl session 16c5c365-b73e-45ee-8ba7-d4d283c7e6bf.\n",
       "\n",
-      "Please view our Getting Started page to access the most up-to-date information on the Interactive Sessions kernel: https://docs.aws.amazon.com/glue/latest/dg/interactive-sessions.html\n",
-      "Setting Glue version to: 3.0\n",
-      "Previous number of workers: 5\n",
-      "Setting new number of workers to: 2\n",
-      "Previous worker type: G.1X\n",
-      "Setting new worker type to: G.2X\n",
-      "Current idle_timeout is 2880 minutes.\n",
-      "idle_timeout has been set to 6000 minutes.\n",
-      "Previous region: None\n",
+      "No change will be made to the current session that is set as glueetl. The session configuration change will apply to newly created sessions.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous number of workers: 2\n",
+      "Setting new number of workers to: 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are already connected to a glueetl session 16c5c365-b73e-45ee-8ba7-d4d283c7e6bf.\n",
+      "\n",
+      "No change will be made to the current session that is set as glueetl. The session configuration change will apply to newly created sessions.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous worker type: G.2X\n",
+      "Setting new worker type to: G.2X\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are already connected to a glueetl session 16c5c365-b73e-45ee-8ba7-d4d283c7e6bf.\n",
+      "\n",
+      "No change will be made to the current session that is set as glueetl. The session configuration change will apply to newly created sessions.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current idle_timeout is 6000 minutes.\n",
+      "idle_timeout has been set to 6000 minutes.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are already connected to a glueetl session 16c5c365-b73e-45ee-8ba7-d4d283c7e6bf.\n",
+      "\n",
+      "No change will be made to the current session that is set as glueetl. The session configuration change will apply to newly created sessions.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Previous region: ap-northeast-2\n",
       "Setting new region to: ap-northeast-2\n",
-      "Region is set to: ap-northeast-2\n",
-      "Current iam_role is None\n",
+      "Reauthenticating Glue client with new region: ap-northeast-2\n",
+      "IAM role has been set to arn:aws:iam::499514681453:role/AWSGlueServiceRoleJupyter. Reauthenticating.\n",
+      "Authenticating with profile=default\n",
+      "glue_role_arn defined by user: arn:aws:iam::499514681453:role/AWSGlueServiceRoleJupyter\n",
+      "Authentication done.\n",
+      "Region is set to: ap-northeast-2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are already connected to a glueetl session 16c5c365-b73e-45ee-8ba7-d4d283c7e6bf.\n",
+      "\n",
+      "No change will be made to the current session that is set as glueetl. The session configuration change will apply to newly created sessions.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current iam_role is arn:aws:iam::499514681453:role/AWSGlueServiceRoleJupyter\n",
       "iam_role has been set to arn:aws:iam::499514681453:role/AWSGlueServiceRoleJupyter.\n"
      ]
     }
@@ -528,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "id": "71bcbeca",
    "metadata": {},
    "outputs": [
@@ -692,11 +777,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "3de004e6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "++\n",
+      "||\n",
+      "++\n",
+      "++\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "ALTER TABLE `glue_catalog`.sample.`iceberg`\n",
+    "ADD COLUMN `add-col` bigint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "07afea99",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+---------+-------+\n",
+      "|           col_name|data_type|comment|\n",
+      "+-------------------+---------+-------+\n",
+      "|               year|   bigint|       |\n",
+      "|            quarter|   bigint|       |\n",
+      "|              month|   bigint|       |\n",
+      "|       day_of_month|   bigint|       |\n",
+      "|        day_of_week|   bigint|       |\n",
+      "|            fl_date|   string|       |\n",
+      "|     unique_carrier|   string|       |\n",
+      "|         airline_id|   bigint|       |\n",
+      "|            carrier|   string|       |\n",
+      "|           tail_num|   string|       |\n",
+      "|             fl_num|   bigint|       |\n",
+      "|       crs_dep_time|   bigint|       |\n",
+      "|           dep_time|   bigint|       |\n",
+      "|          dep_delay|   bigint|       |\n",
+      "|      dep_delay_new|   bigint|       |\n",
+      "|          dep_del15|   bigint|       |\n",
+      "|    dep_delay_group|   bigint|       |\n",
+      "|       dep_time_blk|   string|       |\n",
+      "|           taxi_out|   bigint|       |\n",
+      "|         wheels_off|   bigint|       |\n",
+      "|          wheels_on|   bigint|       |\n",
+      "|            taxi_in|   bigint|       |\n",
+      "|       crs_arr_time|   bigint|       |\n",
+      "|           arr_time|   bigint|       |\n",
+      "|          arr_delay|   bigint|       |\n",
+      "|      arr_delay_new|   bigint|       |\n",
+      "|          arr_del15|   bigint|       |\n",
+      "|    arr_delay_group|   bigint|       |\n",
+      "|       arr_time_blk|   string|       |\n",
+      "|          cancelled|   bigint|       |\n",
+      "|  cancellation_code|   string|       |\n",
+      "|           diverted|   bigint|       |\n",
+      "|   crs_elapsed_time|   bigint|       |\n",
+      "|actual_elapsed_time|   bigint|       |\n",
+      "|           air_time|   bigint|       |\n",
+      "|            flights|   bigint|       |\n",
+      "|           distance|   bigint|       |\n",
+      "|     distance_group|   bigint|       |\n",
+      "|                mon|   string|       |\n",
+      "|      carrier_delay|   bigint|       |\n",
+      "|      weather_delay|   bigint|       |\n",
+      "|          nas_delay|   bigint|       |\n",
+      "|     security_delay|   bigint|       |\n",
+      "|late_aircraft_delay|   bigint|       |\n",
+      "|     first_dep_time|   bigint|       |\n",
+      "|    total_add_gtime|   bigint|       |\n",
+      "|  longest_add_gtime|   bigint|       |\n",
+      "|            add-col|   bigint|       |\n",
+      "|                   |         |       |\n",
+      "|     # Partitioning|         |       |\n",
+      "|    Not partitioned|         |       |\n",
+      "+-------------------+---------+-------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"describe `glue_catalog`.sample.`iceberg`\").show(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5eefbc90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "++\n",
+      "||\n",
+      "++\n",
+      "++\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "ALTER TABLE `glue_catalog`.sample.`iceberg` DROP COLUMN longest_add_gtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "39f07e03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+---------+-------+\n",
+      "|           col_name|data_type|comment|\n",
+      "+-------------------+---------+-------+\n",
+      "|               year|   bigint|       |\n",
+      "|            quarter|   bigint|       |\n",
+      "|              month|   bigint|       |\n",
+      "|       day_of_month|   bigint|       |\n",
+      "|        day_of_week|   bigint|       |\n",
+      "|            fl_date|   string|       |\n",
+      "|     unique_carrier|   string|       |\n",
+      "|         airline_id|   bigint|       |\n",
+      "|            carrier|   string|       |\n",
+      "|           tail_num|   string|       |\n",
+      "|             fl_num|   bigint|       |\n",
+      "|       crs_dep_time|   bigint|       |\n",
+      "|           dep_time|   bigint|       |\n",
+      "|          dep_delay|   bigint|       |\n",
+      "|      dep_delay_new|   bigint|       |\n",
+      "|          dep_del15|   bigint|       |\n",
+      "|    dep_delay_group|   bigint|       |\n",
+      "|       dep_time_blk|   string|       |\n",
+      "|           taxi_out|   bigint|       |\n",
+      "|         wheels_off|   bigint|       |\n",
+      "|          wheels_on|   bigint|       |\n",
+      "|            taxi_in|   bigint|       |\n",
+      "|       crs_arr_time|   bigint|       |\n",
+      "|           arr_time|   bigint|       |\n",
+      "|          arr_delay|   bigint|       |\n",
+      "|      arr_delay_new|   bigint|       |\n",
+      "|          arr_del15|   bigint|       |\n",
+      "|    arr_delay_group|   bigint|       |\n",
+      "|       arr_time_blk|   string|       |\n",
+      "|          cancelled|   bigint|       |\n",
+      "|  cancellation_code|   string|       |\n",
+      "|           diverted|   bigint|       |\n",
+      "|   crs_elapsed_time|   bigint|       |\n",
+      "|actual_elapsed_time|   bigint|       |\n",
+      "|           air_time|   bigint|       |\n",
+      "|            flights|   bigint|       |\n",
+      "|           distance|   bigint|       |\n",
+      "|     distance_group|   bigint|       |\n",
+      "|                mon|   string|       |\n",
+      "|      carrier_delay|   bigint|       |\n",
+      "|      weather_delay|   bigint|       |\n",
+      "|          nas_delay|   bigint|       |\n",
+      "|     security_delay|   bigint|       |\n",
+      "|late_aircraft_delay|   bigint|       |\n",
+      "|     first_dep_time|   bigint|       |\n",
+      "|    total_add_gtime|   bigint|       |\n",
+      "|            add-col|   bigint|       |\n",
+      "|                   |         |       |\n",
+      "|     # Partitioning|         |       |\n",
+      "|    Not partitioned|         |       |\n",
+      "+-------------------+---------+-------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "spark.sql(\"describe `glue_catalog`.sample.`iceberg`\").show(100)"
+   ]
   }
  ],
  "metadata": {
